# oftk

./: .gitignore  Claude.md  IMPLEMENTATION_REPORT_SEARCH_ENGINE_INTEGRATION.md  IMPLEMENTATION_REPORT_SIDEBAR_KEYBOARD_NAVIGATION.md
.claude/: settings.local.json
ofkt/: .gitignore  BENCHMARK_SETUP.md  BUGFIX_LOG.md  CHANGELOG.md  Cargo.toml  INTEGRATION_TEST.md  LICENSE  OPTIMIZATION_REPORT.md  PHASE_6.1_SUMMARY.md  PHASE_6.2_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_8_COMPLETE.md  PROJECT_COMPLETE.md  README.md  TASK_6.1.1_COMPLETE.md  TASK_6.1.2-6.1.4_COMPLETE.md  TEST_COVERAGE.md  USER_GUIDE.md  build.rs  test_output.txt
ofkt/benches/: README.md  alias_benchmark.rs  file_operations_benchmark.rs  search_benchmark.rs
ofkt/config/: default_config.json
ofkt/docs/: HOTKEY_INTEGRATION_TEST_REPORT.md
ofkt/resources/: README.md
ofkt/src/: lib.rs  main.rs
ofkt/src/app/: mod.rs  state.rs
ofkt/src/core/: alias.rs  clipboard.rs  directory_browser.rs  file_manager.rs  history.rs  mod.rs  operation_history.rs  quick_access.rs  search.rs
ofkt/src/data/: models.rs  storage.rs
ofkt/src/platform/: autostart.rs  drives.rs  edge_detector.rs  hotkey.rs  mod.rs  system_tray.rs  theme_detector.rs
ofkt/src/ui/: context_menu.rs  favorites.rs  file_tree.rs  history.rs  mod.rs  search_bar.rs  settings.rs  theme.rs
ofkt/src/utils/: logger.rs  path.rs
ofkt/tests/: integration_test.rs  search_engine_test.rs
rules/: 01-manager-role.md  02-agent-delegation.md  03-pdca-cycle.md  04-quality-standards.md  05-communication.md  06-git-workflow.md  07-troubleshooting.md
(+5 files in other folders)
