[package]
name = "ofkt"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", features = ["persistence", "default_fonts"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Registry", "Win32_UI_Shell", "Win32_Storage_FileSystem"] }
tray-icon = "0.18"
global-hotkey = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trash = "5.1"
walkdir = "2.5"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
fuzzy-matcher = "0.3"
uuid = { version = "1.0", features = ["v4"] }
image = "0.25"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[dev-dependencies]
tempfile = "3.13"
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
winres = "0.1"

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "alias_benchmark"
harness = false

[[bench]]
name = "file_operations_benchmark"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
